# deadwood-bot

./: .env_example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  babel.cfg  deadwood-bot.service  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: on_develop.yaml  on_release.yaml
app/: __init__.py  bot.py  models.py
app/config/: settings.py
app/plugins/: hc_command.py  id_command.py  me_command.py  on_covid_handler.py  on_flood_handler.py  on_group_message_handler.py  on_join_handler.py  r_command.py  start_command.py
app/plugins/public/: json_command.py  me_command.py  on_covid_handler.py  on_group_message_handler.py  on_left_handler.py  on_voice_handler.py  r_command.py  start_command.py  stat_command.py
app/utils/: custom_filters.py  reddit.py  utils.py
locales/ru/LC_MESSAGES/: messages.po
migrations/app/: 1_create_chat_statistic_table.py  2_update_chat_statistic_table.py
