[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deadwood-bot"
authors = [
    { name = "Katulos", email = "katulos@protonmail.com" },
    { name = "Davide Galilei", email = "davidegalilei2018@gmail.com" }
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]
dependencies = [
    "aerich==0.7.2",
    "aiohttp==3.8.6",
    "asyncpraw==7.7.1",
    "asyncprawcore==2.3.0",
    "cashews==5.3.2",
    "diskcache==5.6.3",
    "pydantic-settings==2.0.3",
    "pykeyboard==0.1.5",
    "pyrogram==2.0.106",
    "python-dotenv==0.21.1",
    "tgcrypto==1.2.5",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "README.rst", "USAGE.rst"]}

[project.optional-dependencies]
dev = [
    "babel==2.11.0",
    "pre-commit==2.21.0",
    "pylint-pydantic==0.2.4",
    "bump-my-version==0.11.0",
    "pip-tools==6.14.0",
]
test = []

[tool.setuptools]
packages = ["app"]

[tool.aerich]
tortoise_orm = "app.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.black]
line-length = 79
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.bumpversion]
current_version = "0.0.3"
commit = true
tag = false
message = "Bump version: {current_version} -> {new_version}"

[tool.bumpversion.parts.dev]
values = ["release", "dev"]

[[tool.bumpversion.files]]
filename = "app/__init__.py"

[tools.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]
max-line-length = 79
exclude = [".tox", ".git", "venv", ".venv", "migrations"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 79

# [tool.mypy]
# disallow_untyped_defs = "True"
# disallow_any_unimported = "True"
# no_implicit_optional = "True"
# check_untyped_defs = "True"
# warn_return_any = "True"
# warn_unused_ignores = "True"
# show_error_codes = "True"
# exclude = [
#     "/__init__\\.py$",
#     "^migrations/"
# ]
